AC_PREREQ(2.61)
AC_INIT([challenge], [0.1], [joshrotenberg@gmail.com])

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE
#AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_SRCDIR(src/challenge.c)
AC_OUTPUT
