AM_CFLAGS = -g 

#lib_LTLIBRARIES = libvccc.la
#libzmqpbexample_la_LIBADD = $(PROTOBUF_LIBS) $(ZMQ_LIBS)
#include_HEADERS = vccc.h

#libvccc_la_LDFLAGS = -version-info 1:0:0 -export-dynamic -no-undefined -fPIC
#libvccc_la_SOURCES = vccc.cc

#zmqpbexample.pb.cc: ../protobuf/zmqpbexample.proto
#	${PROTOC} --cpp_out=. --proto_path=../protobuf ../protobuf/zmqpbexample.proto

bin_PROGRAMS = challenge
challenge_SOURCES = challenge.c
#vccb_SOURCES = main.cc
#what_SOURCES = what.c
#vccc_LDADD = libvccc.la

